Klar, inkluderar media queries och kommentarer

--- a/Ant-Man.HTML
+++ b/Ant-Man.HTML
@@ -8,41 +8,44 @@
         <title>Ant-Man</title>
     </head>
     <body>
-        <nav>
-            <ul>
-                <li>
-                    <a href="Capteam.HTML">Team</a>
-                </li>
-                <li class="dropdown">
-                    <a href="#">List</a>
-                    <div class="dropdown-content">
-                        <ul>
-                            <li>
-                                <a class="smallestfont" href="CaptainAmerica.HTML">Captain America</a>
-                            </li>
-                            <li>
-                                <a href="Hawkeye.HTML">Hawkeye</a>
-                            </li>
-                            <li>
-                                <a href="Falcon.HTML">Falcon</a>
-                            </li>
-                            <li>
-                                <a class="smallerfont" href="ScarletWitch.HTML">Scarlet Witch</a>
-                            </li>
-                            <li>
-                                <a class="smallerfont" href="WinterSoldier.HTML">Winter Soldier</a>
-                            </li>
-                            <li>
-                                <a href="Ant-Man.HTML">Ant-Man</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="switchteam">
-                    <a href="Ironteam.HTML">Switch team</a>
-                </li>
-            </ul>
-        </nav>
+        <header>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Capteam.HTML">Team</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#">List</a>
+                        <div class="dropdown-content">
+                            <ul>
+                                <li>
+                                    <a class="smallestfont" href="CaptainAmerica.HTML">Captain America</a>
+                                </li>
+                                <li>
+                                    <a href="Hawkeye.HTML">Hawkeye</a>
+                                </li>
+                                <li>
+                                    <a href="Falcon.HTML">Falcon</a>
+                                </li>
+                                <li>
+                                    <a class="smallerfont" href="ScarletWitch.HTML">Scarlet Witch</a>
+                                </li>
+                                <li>
+                                    <a class="smallerfont" href="WinterSoldier.HTML">Winter Soldier</a>
+                                </li>
+                                <li>
+                                    <a href="Ant-Man.HTML">Ant-Man</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="switchteam">
+                        <a href="Ironteam.HTML">Switch team</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        
         <div class="leftcolumn marginleft">
             <h1>Ant-Man</h1>
             <p>Scott Edward Harris Lang is a former criminal who was convinced by Pym Technologies CEO Hank Pym to take up his mantle as the new Ant-Man. As Ant-Man, Lang fought against Darren Cross, Pym's protégé who became obsessed with Pym Particles and intended to recreate and sell the technology to terrorist organizations such as HYDRA and the Ten Rings. After his daughter, Cassie Lang, was taken hostage by Cross, Lang was able to send both of them into the Quantum Realm, where he saw Pym's wife Janet van Dyne, before successfully returning. Cross was presumably killed. Lang then began a romantic relationship with Pym's daughter, Hope van Dyne.</p>
