--- a/CaptainAmerica.HTML
+++ b/CaptainAmerica.HTML
@@ -8,41 +8,43 @@
         <title>Captain America</title>
     </head>
     <body>
-        <nav>
-            <ul>
-                <li>
-                    <a href="Capteam.HTML">Team</a>
-                </li>
-                <li class="dropdown">
-                    <a href="#">List</a>
-                    <div class="dropdown-content">
-                        <ul>
-                            <li>
-                                <a class="smallestfont" href="CaptainAmerica.HTML">Captain America</a>
-                            </li>
-                            <li>
-                                <a href="Hawkeye.HTML">Hawkeye</a>
-                            </li>
-                            <li>
-                                <a href="Falcon.HTML">Falcon</a>
-                            </li>
-                            <li>
-                                <a class="smallerfont" href="ScarletWitch.HTML">Scarlet Witch</a>
-                            </li>
-                            <li>
-                                <a class="smallerfont" href="WinterSoldier.HTML">Winter Soldier</a>
-                            </li>
-                            <li>
-                                <a href="Ant-Man.HTML">Ant-Man</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="switchteam">
-                    <a href="Ironteam.HTML">Switch team</a>
-                </li>
-            </ul>
-        </nav>
+        <header>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Capteam.HTML">Team</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#">List</a>
+                        <div class="dropdown-content">
+                            <ul>
+                                <li>
+                                    <a class="smallestfont" href="CaptainAmerica.HTML">Captain America</a>
+                                </li>
+                                <li>
+                                    <a href="Hawkeye.HTML">Hawkeye</a>
+                                </li>
+                                <li>
+                                    <a href="Falcon.HTML">Falcon</a>
+                                </li>
+                                <li>
+                                    <a class="smallerfont" href="ScarletWitch.HTML">Scarlet Witch</a>
+                                </li>
+                                <li>
+                                    <a class="smallerfont" href="WinterSoldier.HTML">Winter Soldier</a>
+                                </li>
+                                <li>
+                                    <a href="Ant-Man.HTML">Ant-Man</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="switchteam">
+                        <a href="Ironteam.HTML">Switch team</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
         <div class="leftcolumn marginleft">
             <h1>Captain America</h1>
             <p>Captain Steven Grant "Steve" Rogers is a World War II veteran, a founding member of the Avengers, and Earth's first known superhero. Rogers had suffered from numerous health problems, and upon America's entry into World War II, was rejected from military service despite several attempts to enlist. Rogers was the only recipient of the Super Soldier Serum developed by Abraham Erskine under the Strategic Scientific Reserve. Determined to serve, Rogers ultimately volunteered for the Project Rebirth, which enhanced the frail Rogers' body to the peak of human physicality. Mistrusted by Colonel Chester Phillips, the head of the SSR, Rogers was relegated to propaganda campaigns, and was given the new moniker of Captain America. Rogers later joined the war with a combat role after he single-handedly liberated captured Allied prisoners of war.</p>
@@ -57,7 +59,7 @@
             <img class="textpic" alt="Bucky talking to Steve Rogers" src="CapMomdead.png">
             <h4>Recruited by Brandt</h4>
             <br>
-            <p>With Dr. Abraham Erskine now deceased, any hope of reproducing the Super Soldier Serum was seemingly lost. Blood samples were taken from Rogers in hopes to replicate the formula. Out of the twelve, one was given to Howard Stark.[7] Rogers then spoke with Peggy Carter who insisted that if the experiment could have only worked once, Erskine would have been glad it worked on Rogers.</p>
+            <p>With Dr. Abraham Erskine now deceased, any hope of reproducing the Super Soldier Serum was seemingly lost. Blood samples were taken from Rogers in hopes to replicate the formula. Out of the twelve, one was given to Howard Stark. Rogers then spoke with Peggy Carter who insisted that if the experiment could have only worked once, Erskine would have been glad it worked on Rogers.</p>
             <p class="bottommargin"></p>
         </div>
         <div class="rightcolumn capcolor">
