--- a/Hawkeye.HTML
+++ b/Hawkeye.HTML
@@ -8,41 +8,44 @@
         <title>Hawkeye</title>
     </head>
     <body>
-        <nav>
-            <ul>
-                <li>
-                    <a href="Capteam.HTML">Team</a>
-                </li>
-                <li class="dropdown">
-                    <a href="#">List</a>
-                    <div class="dropdown-content">
-                        <ul>
-                            <li>
-                                <a class="smallestfont" href="CaptainAmerica.HTML">Captain America</a>
-                            </li>
-                            <li>
-                                <a href="Hawkeye.HTML">Hawkeye</a>
-                            </li>
-                            <li>
-                                <a href="Falcon.HTML">Falcon</a>
-                            </li>
-                            <li>
-                                <a class="smallerfont" href="ScarletWitch.HTML">Scarlet Witch</a>
-                            </li>
-                            <li>
-                                <a class="smallerfont" href="WinterSoldier.HTML">Winter Soldier</a>
-                            </li>
-                            <li>
-                                <a href="Ant-Man.HTML">Ant-Man</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="switchteam">
-                    <a href="Ironteam.HTML">Switch team</a>
-                </li>
-            </ul>
-        </nav>
+        <header>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Capteam.HTML">Team</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#">List</a>
+                        <div class="dropdown-content">
+                            <ul>
+                                <li>
+                                    <a class="smallestfont" href="CaptainAmerica.HTML">Captain America</a>
+                                </li>
+                                <li>
+                                    <a href="Hawkeye.HTML">Hawkeye</a>
+                                </li>
+                                <li>
+                                    <a href="Falcon.HTML">Falcon</a>
+                                </li>
+                                <li>
+                                    <a class="smallerfont" href="ScarletWitch.HTML">Scarlet Witch</a>
+                                </li>
+                                <li>
+                                    <a class="smallerfont" href="WinterSoldier.HTML">Winter Soldier</a>
+                                </li>
+                                <li>
+                                    <a href="Ant-Man.HTML">Ant-Man</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="switchteam">
+                        <a href="Ironteam.HTML">Switch team</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        
         <div class="leftcolumn marginleft">
             <h1>Hawkeye</h1>
             <p>Clinton Francis "Clint" Barton, also known as Hawkeye, is a skilled marksman, a former special agent of S.H.I.E.L.D. and one of the founding members of the Avengers. Known for his use of the bow and arrow as his primary weapon, Barton had become one of the best agents of S.H.I.E.L.D., responsible for the recruitment of Black Widow, whom he developed a strong friendship with. Assigned by Nick Fury into watching over the Tesseract, he was brainwashed by Loki and used as a pawn for all his evil schemes. However, following their Attack on the Helicarrier, he was freed from Loki's mental control by Black Widow and joined the Avengers to fight against Loki's Chitauri army in the Battle of New York, ending Loki's Invasion before Hawkeye had returned to his work as a S.H.I.E.L.D. agent.</p>
