--- a/Vision.HTML
+++ b/Vision.HTML
@@ -8,41 +8,44 @@
         <title>Vision</title>
     </head>
     <body>
-        <nav class="ironnavbackground">
-            <ul>
-                <li>
-                    <a class="ironnavbuttons" href="Ironteam.HTML">Team</a>
-                </li>
-                <li class="dropdown">
-                    <a class="ironnavbuttons" href="#">List</a>
-                    <div class="dropdown-content">
-                        <ul>
-                            <li>
-                                <a class="ironnavbuttons" href="IronMan.HTML">Iron Man</a>
-                            </li>
-                            <li>
-                                <a class="ironnavbuttons" href="Spider-Man.HTML">Spider-Man</a>
-                            </li>
-                            <li>
-                                <a class="ironnavbuttons" href="Vision.HTML">Vision</a>
-                            </li>
-                            <li>
-                                <a class="ironnavbuttons smallerfont" href="BlackWidow.HTML">Black Widow</a>
-                            </li>
-                            <li>
-                                <a class="ironnavbuttons smallerfont" href="WarMachine.HTML">War Machine</a>
-                            </li>
-                            <li>
-                                <a class="ironnavbuttons smallerfont" href="BlackPanther.HTML">Black Panther</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="switchteam">
-                    <a class="ironnavbuttons" href="Capteam.HTML">Switch team</a>
-                </li>
-            </ul>
-        </nav>
+        <header>
+            <nav class="ironnavbackground">
+                <ul>
+                    <li>
+                        <a class="ironnavbuttons" href="Ironteam.HTML">Team</a>
+                    </li>
+                    <li class="dropdown">
+                        <a class="ironnavbuttons" href="#">List</a>
+                        <div class="dropdown-content">
+                            <ul>
+                                <li>
+                                    <a class="ironnavbuttons" href="IronMan.HTML">Iron Man</a>
+                                </li>
+                                <li>
+                                    <a class="ironnavbuttons" href="Spider-Man.HTML">Spider-Man</a>
+                                </li>
+                                <li>
+                                    <a class="ironnavbuttons" href="Vision.HTML">Vision</a>
+                                </li>
+                                <li>
+                                    <a class="ironnavbuttons smallerfont" href="BlackWidow.HTML">Black Widow</a>
+                                </li>
+                                <li>
+                                    <a class="ironnavbuttons smallerfont" href="WarMachine.HTML">War Machine</a>
+                                </li>
+                                <li>
+                                    <a class="ironnavbuttons smallerfont" href="BlackPanther.HTML">Black Panther</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="switchteam">
+                        <a class="ironnavbuttons" href="Capteam.HTML">Switch team</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        
         <div class="leftcolumn marginleft">
             <h1>Vision</h1>
             <p>Vision was an android who possessed a synthetic vibranium body created by Ultron and Helen Cho, along with the powerful space gem known as the Mind Stone. Originally conceived as the perfect form for Ultron, the body was stolen by the Avengers, after which it was repurposed by Tony Stark and Bruce Banner, who uploaded the remnants of Stark's personal A.I. J.A.R.V.I.S. into it. Upon his birth, Vision declared he was a mixture of Ultron and J.A.R.V.I.S., one that would fight to protect humanity at all costs. Vision then joined the Avengers in the Battle of Sokovia, using his powers to prevent Ultron from transferring his consciousness into the internet and allowing the Avengers to successfully put an end to him.</p>
