--- a/BlackWidow.HTML
+++ b/BlackWidow.HTML
@@ -8,41 +8,44 @@
         <title>Black Widow</title>
     </head>
     <body>
-        <nav class="ironnavbackground">
-            <ul>
-                <li>
-                    <a class="ironnavbuttons" href="Ironteam.HTML">Team</a>
-                </li>
-                <li class="dropdown">
-                    <a class="ironnavbuttons" href="#">List</a>
-                    <div class="dropdown-content">
-                        <ul>
-                            <li>
-                                <a class="ironnavbuttons" href="IronMan.HTML">Iron Man</a>
-                            </li>
-                            <li>
-                                <a class="ironnavbuttons" href="Spider-Man.HTML">Spider-Man</a>
-                            </li>
-                            <li>
-                                <a class="ironnavbuttons" href="Vision.HTML">Vision</a>
-                            </li>
-                            <li>
-                                <a class="ironnavbuttons smallerfont" href="BlackWidow.HTML">Black Widow</a>
-                            </li>
-                            <li>
-                                <a class="ironnavbuttons smallerfont" href="WarMachine.HTML">War Machine</a>
-                            </li>
-                            <li>
-                                <a class="ironnavbuttons smallerfont" href="BlackPanther.HTML">Black Panther</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="switchteam">
-                    <a class="ironnavbuttons" href="Capteam.HTML">Switch team</a>
-                </li>
-            </ul>
-        </nav>
+        <header>
+            <nav class="ironnavbackground">
+                <ul>
+                    <li>
+                        <a class="ironnavbuttons" href="Ironteam.HTML">Team</a>
+                    </li>
+                    <li class="dropdown">
+                        <a class="ironnavbuttons" href="#">List</a>
+                        <div class="dropdown-content">
+                            <ul>
+                                <li>
+                                    <a class="ironnavbuttons" href="IronMan.HTML">Iron Man</a>
+                                </li>
+                                <li>
+                                    <a class="ironnavbuttons" href="Spider-Man.HTML">Spider-Man</a>
+                                </li>
+                                <li>
+                                    <a class="ironnavbuttons" href="Vision.HTML">Vision</a>
+                                </li>
+                                <li>
+                                    <a class="ironnavbuttons smallerfont" href="BlackWidow.HTML">Black Widow</a>
+                                </li>
+                                <li>
+                                    <a class="ironnavbuttons smallerfont" href="WarMachine.HTML">War Machine</a>
+                                </li>
+                                <li>
+                                    <a class="ironnavbuttons smallerfont" href="BlackPanther.HTML">Black Panther</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="switchteam">
+                        <a class="ironnavbuttons" href="Capteam.HTML">Switch team</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        
         <div class="leftcolumn marginleft">
             <h1>Black Widow</h1>
             <p>Natalia Alianovna "Natasha" Romanoff, also known as Black Widow, was one of the most talented spies and assassins in the entire world and a founding member of the Avengers. Originally an agent of the Soviet agency for foreign intelligence, the KGB, she later became a member of S.H.I.E.L.D., the international counter-intelligence agency. Having extensive mastery in martial arts and armed with her Widow's Bite, Black Widow became one of S.H.I.E.L.D.'s most efficient agents. During one mission, she was sent undercover into Stark Industries to watch Tony Stark due to fears that he was dying. During this mission, Romanoff had assisted Stark with defeating Ivan Vanko's terrorist plots against him.</p>
