--- a/IronMan.HTML
+++ b/IronMan.HTML
@@ -8,41 +8,44 @@
         <title>Iron Man</title>
     </head>
     <body>
-        <nav class="ironnavbackground">
-            <ul>
-                <li>
-                    <a class="ironnavbuttons" href="Ironteam.HTML">Team</a>
-                </li>
-                <li class="dropdown">
-                    <a class="ironnavbuttons" href="#">List</a>
-                    <div class="dropdown-content">
-                        <ul>
-                            <li>
-                                <a class="ironnavbuttons" href="IronMan.HTML">Iron Man</a>
-                            </li>
-                            <li>
-                                <a class="ironnavbuttons" href="Spider-Man.HTML">Spider-Man</a>
-                            </li>
-                            <li>
-                                <a class="ironnavbuttons" href="Vision.HTML">Vision</a>
-                            </li>
-                            <li>
-                                <a class="ironnavbuttons smallerfont" href="BlackWidow.HTML">Black Widow</a>
-                            </li>
-                            <li>
-                                <a class="ironnavbuttons smallerfont" href="WarMachine.HTML">War Machine</a>
-                            </li>
-                            <li>
-                                <a class="ironnavbuttons smallerfont" href="BlackPanther.HTML">Black Panther</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="switchteam">
-                    <a class="ironnavbuttons" href="Capteam.HTML">Switch team</a>
-                </li>
-            </ul>
-        </nav>
+        <header>
+            <nav class="ironnavbackground">
+                <ul>
+                    <li>
+                        <a class="ironnavbuttons" href="Ironteam.HTML">Team</a>
+                    </li>
+                    <li class="dropdown">
+                        <a class="ironnavbuttons" href="#">List</a>
+                        <div class="dropdown-content">
+                            <ul>
+                                <li>
+                                    <a class="ironnavbuttons" href="IronMan.HTML">Iron Man</a>
+                                </li>
+                                <li>
+                                    <a class="ironnavbuttons" href="Spider-Man.HTML">Spider-Man</a>
+                                </li>
+                                <li>
+                                    <a class="ironnavbuttons" href="Vision.HTML">Vision</a>
+                                </li>
+                                <li>
+                                    <a class="ironnavbuttons smallerfont" href="BlackWidow.HTML">Black Widow</a>
+                                </li>
+                                <li>
+                                    <a class="ironnavbuttons smallerfont" href="WarMachine.HTML">War Machine</a>
+                                </li>
+                                <li>
+                                    <a class="ironnavbuttons smallerfont" href="BlackPanther.HTML">Black Panther</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="switchteam">
+                        <a class="ironnavbuttons" href="Capteam.HTML">Switch team</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        
         <div class="leftcolumn marginleft">
             <h1>Iron Man</h1>
             <p>Anthony Edward Stark was born on Friday, May 29, 1970, in Manhattan, New York City, to Howard and Maria Stark. Tony had become good friends with Edwin Jarvis, the butler of Stark's family, who watched over Tony throughout all of his childhood. Tony's early life was often dominated by the absence of his own father who he would later describe as both 'cold' and 'calculating'. Growing up, Tony had issues with his father, who Tony has said never told his son that he loved him, or even that he liked him. Since Tony was so young, Howard never was able to tell him his plans for him.</p>
