--- a/WarMachine.HTML
+++ b/WarMachine.HTML
@@ -8,41 +8,44 @@
         <title>War Machine</title>
     </head>
     <body>
-        <nav class="ironnavbackground">
-            <ul>
-                <li>
-                    <a class="ironnavbuttons" href="Ironteam.HTML">Team</a>
-                </li>
-                <li class="dropdown">
-                    <a class="ironnavbuttons" href="#">List</a>
-                    <div class="dropdown-content">
-                        <ul>
-                            <li>
-                                <a class="ironnavbuttons" href="IronMan.HTML">Iron Man</a>
-                            </li>
-                            <li>
-                                <a class="ironnavbuttons" href="Spider-Man.HTML">Spider-Man</a>
-                            </li>
-                            <li>
-                                <a class="ironnavbuttons" href="Vision.HTML">Vision</a>
-                            </li>
-                            <li>
-                                <a class="ironnavbuttons smallerfont" href="BlackWidow.HTML">Black Widow</a>
-                            </li>
-                            <li>
-                                <a class="ironnavbuttons smallerfont" href="WarMachine.HTML">War Machine</a>
-                            </li>
-                            <li>
-                                <a class="ironnavbuttons smallerfont" href="BlackPanther.HTML">Black Panther</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="switchteam">
-                    <a class="ironnavbuttons" href="Capteam.HTML">Switch team</a>
-                </li>
-            </ul>
-        </nav>
+        <header>
+            <nav class="ironnavbackground">
+                <ul>
+                    <li>
+                        <a class="ironnavbuttons" href="Ironteam.HTML">Team</a>
+                    </li>
+                    <li class="dropdown">
+                        <a class="ironnavbuttons" href="#">List</a>
+                        <div class="dropdown-content">
+                            <ul>
+                                <li>
+                                    <a class="ironnavbuttons" href="IronMan.HTML">Iron Man</a>
+                                </li>
+                                <li>
+                                    <a class="ironnavbuttons" href="Spider-Man.HTML">Spider-Man</a>
+                                </li>
+                                <li>
+                                    <a class="ironnavbuttons" href="Vision.HTML">Vision</a>
+                                </li>
+                                <li>
+                                    <a class="ironnavbuttons smallerfont" href="BlackWidow.HTML">Black Widow</a>
+                                </li>
+                                <li>
+                                    <a class="ironnavbuttons smallerfont" href="WarMachine.HTML">War Machine</a>
+                                </li>
+                                <li>
+                                    <a class="ironnavbuttons smallerfont" href="BlackPanther.HTML">Black Panther</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="switchteam">
+                        <a class="ironnavbuttons" href="Capteam.HTML">Switch team</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        
         <div class="leftcolumn marginleft">
             <h1>War Machine</h1>
             <p>Colonel James Rupert "Rhodey" Rhodes is an officer with the United States Air Force and liaison between the military in the Department of Acquisitions and Stark Industries, where he became close friends with Tony Stark. When Stark had been kidnapped by the Ten Rings, Rhodes personally led a mission to rescue his best friend. However, upon their return, Rhodes saw Stark moving away from developing his weapons for the military and soon discovered that he was instead focusing on becoming a hero known as Iron Man. Despite all of his fears for his friend's safety, Rhodes still joined Iron Man in bringing down Obadiah Stane's schemes, while trying to keep Stark's secrets, only for Stark to reveal them to the media himself.</p>
