--- a/WinterSoldier.HTML
+++ b/WinterSoldier.HTML
@@ -8,41 +8,44 @@
         <title>Winter Soldier</title>
     </head>
     <body>
-        <nav>
-            <ul>
-                <li>
-                    <a href="Capteam.HTML">Team</a>
-                </li>
-                <li class="dropdown">
-                    <a href="#">List</a>
-                    <div class="dropdown-content">
-                        <ul>
-                            <li>
-                                <a class="smallestfont" href="CaptainAmerica.HTML">Captain America</a>
-                            </li>
-                            <li>
-                                <a href="Hawkeye.HTML">Hawkeye</a>
-                            </li>
-                            <li>
-                                <a href="Falcon.HTML">Falcon</a>
-                            </li>
-                            <li>
-                                <a class="smallerfont" href="ScarletWitch.HTML">Scarlet Witch</a>
-                            </li>
-                            <li>
-                                <a class="smallerfont" href="WinterSoldier.HTML">Winter Soldier</a>
-                            </li>
-                            <li>
-                                <a href="Ant-Man.HTML">Ant-Man</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="switchteam">
-                    <a href="Ironteam.HTML">Switch team</a>
-                </li>
-            </ul>
-        </nav>
+        <header>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Capteam.HTML">Team</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#">List</a>
+                        <div class="dropdown-content">
+                            <ul>
+                                <li>
+                                    <a class="smallestfont" href="CaptainAmerica.HTML">Captain America</a>
+                                </li>
+                                <li>
+                                    <a href="Hawkeye.HTML">Hawkeye</a>
+                                </li>
+                                <li>
+                                    <a href="Falcon.HTML">Falcon</a>
+                                </li>
+                                <li>
+                                    <a class="smallerfont" href="ScarletWitch.HTML">Scarlet Witch</a>
+                                </li>
+                                <li>
+                                    <a class="smallerfont" href="WinterSoldier.HTML">Winter Soldier</a>
+                                </li>
+                                <li>
+                                    <a href="Ant-Man.HTML">Ant-Man</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="switchteam">
+                        <a href="Ironteam.HTML">Switch team</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        
         <div class="leftcolumn marginleft">
             <h1>Winter Soldier</h1>
             <p>Sergeant James Buchanan "Bucky" Barnes is a World War II veteran, a former officer of the 107th Infantry Regiment and the best friend of Steve Rogers since childhood. Barnes was conscripted and assigned to the 107th in 1943. His regiment was captured by HYDRA, where Barnes was experimented on by HYDRA scientist Arnim Zola. Barnes, along with what remained of his regiment, were later rescued by Rogers, who had become Captain America during Barnes' military absence. Joining forces in the continuing war, Barnes and Rogers formed the Howling Commandos to battle the Red Skull's forces. During an attempt to capture Zola, Barnes was caught in an ambush and plummeted hundreds of feet from a train. As no body was ever recovered, he was then presumed dead, but officially listed as MIA.</p>
